# soemdsp-simd

./: .gitignore  LICENSE  README-NATIVE.md  README.md  progress.md  server.py
docs/: ADDING_HARDCODED_SANDBOX_MODULE.md  ANGELSCRIPT_MODULE_PLAN.md  FUTURE_PLANNING.md  INSTANCE_HANDLE_PATTERN.md  LAST_BIG_PLAN.md  MODULE_PATTERN_REFERENCE.md  MODULE_TRANSLATION_EXAMPLE.md  NATIVE_CPP_WASM_MODULE_GUIDE.md  NATIVE_MODULE_PLACEMENT_POLICY.md  OSC_MODULE_NON_UI_REFERENCE.md  SANDBOX_DESIGN.md  WEBUI_CLAP_HOST_PLAN.md  code-settings-editor-contract.md
public/: app-event-bindings.js  app-state.js  app.js  artifact-coverage-view.js  artifact-list-view.js  artifact-report-reports.js  artifact-report-utils.js  audio-utils.js  boot-loading.js  color-widget.js  format-utils.js  hands-on-readiness-artifact-labels.js  hands-on-readiness-phase-parameter-labels.js  hands-on-readiness-primary-labels.js  hands-on-readiness-probe-labels.js  hands-on-readiness-signal-inspection-labels.js  hands-on-readiness-waveform-labels.js  hands-on-readiness.js  index.html  inspection-cursor-pills.js  inspection-cursor.js  inspection-utils.js  legacy-evidence-checklist-view.js  legacy-evidence-proof-view.js  legacy-evidence-views.js  level-envelope-canvas.js  level-envelope-view.js  manifest-contracts.js  manifest-loader.js  manifest-phase-contracts.js  manifest-processing-contracts.js  manifest-source-view.js  manifest-view.js  native-modules-catalog.json  node-graph-bootstrap.js  (+165 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+130 files in other folders)
