[package]
name = "soemdsp-sandbox-native"
version = "0.2.0"
description = "SoundEmote Sandbox - native desktop wrapper"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
lto = true
